# fhe-vit-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arch.py  extract_full.py  extract_model.py  fhe-vit.py  fhe_inference.cpp  fhe_layers.py  fhe_linear.cpp  fhe_linear.h  fhe_vit_dummy.py  general_verifier.py  generate_32.py  image_loader.py  main.py  plaintext.cpp  plaintext_utils.h  requirements.txt  run_all_batches.sh  run_vit.py  run_vit_best_model.py  run_vit_inference.py  segmented_vit.py  setup.sh  test_example.cpp  train.py  transformer.cpp  verify_weights.py  weight_loader.cpp  weight_loader.h
converted_model/: config.json
input/: labels.txt
scripts/: export_weights.py
